<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.usst.androidtermprogram.fragment.Volley">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volley_presentation"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btv_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volley_string" />

        <Button
            android:id="@+id/btv_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volley_img" />

    </LinearLayout>

    <TextView
        android:id="@+id/string_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/description"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/description"
        android:visibility="gone" />



</LinearLayout>
